problems with template endpoints fixed
